trunk/Archive2/dd/c25799e5bbf055/output
main.cpp:4:21: error: expected primary-expression before 'const'
     foo& op=(foo<U> const&);
                     ^
main.cpp:4:21: error: expected ')' before 'const'
main.cpp:4:28: error: data member 'op' cannot be a member template
     foo& op=(foo<U> const&);
                            ^
main.cpp:10:44: error: no 'foo<T> foo<T>::operator=(const foo<U>&)' member function declared in class 'foo<T>'
 foo<T> foo<T>::operator=(foo<U> const& that) {
                                            ^
